--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "build": "parcel build index.html"
   },
   "dependencies": {
     "react": "16.11.0",
